2000-06-28  Eli Zaretskii  <eliz@is.elta.co.il>

	* dos-fns.el (convert-standard-filename): Fix last change.

2000-06-27  Gerd Moellmann  <gerd@gnu.org>

	* help.el (describe-variable): Don't insert a second `'s' in front
	of the string `value is shown below'.  Since the syntax-table is
	set to emacs-lisp-mode-syntax-table, forward-sexp skips over
	an existing `'s', so that this won't be deleted.

	* pcmpl-cvs.el, pcmpl-gnu.el, pcmpl-linux.el, pcmpl-rpm.el:
	* pcmpl-unix.el: New files.

2000-06-26  Stefan Monnier  <monnier@cs.yale.edu>

	* wid-edit.el (widget-member): Use the new plist-member.

2000-06-26  Gerd Moellmann  <gerd@gnu.org>

	* replace.el (perform-replace): Undo change of 2000-04-04.
	Instead, move backward 1 character at the end of the loop when
	necessary.
	
	* faces.el (fringe): Change face for different backgrounds.

	* eshell/esh-module.el (toplevel): Load defgroup's differently;
	patch from John.

	* eshell/*.el: Change spelling of the Free Software Foundation.

	* eshell/esh-toggle.el: Removed.

	* Makefile.in (DONTCOMPILE): Add eshell/esh-group.el.

	* menu-bar.el (menu-bar-tools-menu): Call read-mail-command
	interactively.

2000-06-26  Alex Schroeder  <alex@gnu.org>

	* sql.el (sql-interactive-mode-map): Use `kbd' in calls to
	`define-key'; instead of checking `(emacs-version)' check for
	`set-keymap-parent' and `set-keymap-name' directly.  Add entries
	for `;' and `o' which might be electric.

	(sql-electric-stuff): New user option.
	(sql-magic-go): New function which uses `sql-electric-stuff'.
	(sql-magic-semicolon): New function which uses
	`sql-electric-stuff'.

	(sql-accumulate-and-indent): Insert newline if `comint-accumulate'
	is not fboundp.

	(sql-oracle-options): New variable.
	(sql-oracle): Use it.

	(sql-imenu-generic-expression): Doc change.
	(sql-find-sqli-buffer): Make sure the default-value of sql-buffer
	is used.

	(sql-informix): Added command line parameter "-" to force
	sql-informix-program to use stdout.
