@@ -1,5 +1,8 @@
 2000-06-28  Eli Zaretskii  <eliz@is.elta.co.il>
 
+	* menu-bar.el (menu-bar-edit-menu) <mark-whole-buffer>: Change
+        name to "Select All".
+
 	* dos-fns.el (convert-standard-filename): Fix last change.
 
 2000-06-27  Gerd Moellmann  <gerd@gnu.org>
